selesai finishing website

--- a/public/scss/_blog.scss
+++ b/public/scss/_blog.scss
@@ -755,7 +755,7 @@
             li {
                 border-bottom: 1px solid #f0e9ff;
                 transition: all 0.3s ease 0s;
-                padding-bottom: 12px;
+                padding-bottom: 4px;
 
                 &:last-child {
                     border-bottom: 0;
@@ -764,7 +764,7 @@
                 a {
                     font-size: 14px;
                     line-height: 20px;
-                    color: #888888;
+                    color: #82C2FB;
 
                     p {
                         margin-bottom: 0px;
