ganti warna birunya

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2231,7 +2231,7 @@ h3 {
 .footer .footer_top {
   padding-top: 50px;
   padding-bottom: 10px  ;
-  background: #1F1F1F;
+  background: #141E46;
 }
 
 @media (max-width: 767px) {
@@ -2839,7 +2839,7 @@ h3 {
 
 /* line 1, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_service.scss */
 .service_area {
-  background: #83C4FF;
+  background: #141E46;
 }
 
 /* line 3, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_service.scss */
