--- a/public/css/style.css
+++ b/public/css/style.css
@@ -837,7 +837,7 @@ h3 {
 /* line 15, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_header.scss */
 .header-area .main-header-area {
   padding: 10px 0;
-  background: #fff;
+  background: #99CA3F;
 }
 
 /* line 31, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_header.scss */
@@ -1130,7 +1130,7 @@ h3 {
   transition: transform 500ms ease, background 500ms ease;
   -webkit-transition: transform 500ms ease, background 500ms ease;
   box-shadow: 0px 3px 16px 0px rgba(0, 0, 0, 0.1);
-  background: rgba(255, 255, 255, 0.96);
+  background: #99CA3F;
 }
 
 @media (max-width: 767px) {
@@ -2843,7 +2843,7 @@ h3 {
 
 /* line 3, C:/Users/SPN Graphics/Desktop/CL September/210 Medical/HTML/scss/_service.scss */
 .service_area .single_service {
-  padding: 40px 30px;
+  padding: 20px 10px;
 }
 
 @media (min-width: 768px) and (max-width: 991px) {
